--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-  h1 Hackathon Starter
-  p.lead A boilerplate for Node.js web applications.
+  h1 Sagacity
+  p.lead An application that takes pictures or fragmented notes and converts them into high quality, readable and organized notes
   hr
   .row
     .col-md-6
