--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -10,12 +10,12 @@
       ul.nav.navbar-nav
         li.nav-item(class=(title === 'Home') ? 'active' : undefined)
           a.nav-link(href='/') Home
-        li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
-          a.nav-link(href='/api') API Examples
-        li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
-          a.nav-link(href='/contact') Contact
-        li.nav-item(class=(title === 'Status') ? 'active' : undefined)
-          a.nav-link(href='/status') Status
+        //- li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
+        //-   a.nav-link(href='/api') API Examples
+        //- li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
+        //-   a.nav-link(href='/contact') Contact
+        //- li.nav-item(class=(title === 'Status') ? 'active' : undefined)
+        //-   a.nav-link(href='/status') Status
         li.nav-item(class=(title === 'Convert') ? 'active' : undefined)
           a.nav-link(href='/convert') Convert
       ul.nav.navbar-nav.ml-auto
