--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,8 +1,8 @@
 footer
   .container.text-center
-    p.float-left © 2019 Company, Inc. All Rights Reserved
-    ul.float-right.list-inline
+    //- p.float-left © 2019 Company, Inc. All Rights Reserved
+    ul
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter') GitHub Project
+        a(href='https://github.com/nshdesai/Sagacity', target="_blank") GitHub Project
       li.list-inline-item
-        a(href='https://github.com/sahat/hackathon-starter/issues') Issues
+        a(href='https://github.com/nshdesai/Sagacity/issues', target="_blank") Issues
