--- a/views/home.pug
+++ b/views/home.pug
@@ -1,7 +1,9 @@
 extends layout
 
 block content
-  h1 Sagacity
+  h1
+    i.fas.fa-greater-than.fa-sm 
+    | Sagacity
   p.lead An application that takes pictures or fragmented notes and converts them into high quality, readable and organized notes
   hr
   .row
