--- a/views/notes.pug
+++ b/views/notes.pug
@@ -1,6 +1,8 @@
 extends layout
 
 block content
-  h1 Notes
-  p.lead An application that takes pictures or fragmented notes and converts them into high quality, readable and organized notes
-  hr
+  h1
+    i.fas.fa-align-justify.fa-sm 
+    | Notes
+    p.lead An application that takes pictures or fragmented notes and converts them into high quality, readable and organized notes
+    hr
