--- a/views/convert.pug
+++ b/views/convert.pug
@@ -2,17 +2,14 @@ extends layout
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h2
-      i.fas.fa-upload.fa-sm
+    h1
+      i.fas.fa-upload.fa-sm 
       | File Upload
-
-  p Upload file to be processed into a text file.
+      p.lead Upload file to be processed into a text file. 
   .row
     .col-md-6
       form(role='form', enctype='multipart/form-data', method='POST')
         input(type='hidden', name='_csrf', value=_csrf)
         .form-group
-          label.col-form-label.font-weight-bold File Input
-          .col-md-6
-            input(type='file', name='myFile')
-        button.btn.btn-primary(type='submit') Submit
+        input(type='file', name='myFile')
+    button.btn.btn-primary(type='submit') Submit
