--- a/views/notes.pug
+++ b/views/notes.pug
@@ -9,3 +9,7 @@ block content
   div.container
     each image in notes.images
       img(src=`data:image/jpeg;base64, ${image.image.toString('base64')}`, width='40%', height='40%')
+
+  div.container
+    each p in notes.processed
+      p `${p.desc}`
