--- a/views/notes.pug
+++ b/views/notes.pug
@@ -8,4 +8,4 @@ block content
   
   div.container
     each image in notes.images
-      img(src=`data:image/jpeg;base64, ${image.image.toString('base64')}`, width='40%', height='40%')
+      img(src=`data:image/jpeg;base64, ${image.image.toString('base64')}`, width='40%', height='40%' style={padding: '10px'})
