--- a/views/account/profile.pug
+++ b/views/account/profile.pug
@@ -88,11 +88,11 @@ block content
   .pb-2.mt-2.mb-4.border-bottom
     h3 Linked Accounts
   .form-group
-    .offset-sm-3.col-md-7.pl-2
-      if user.instagram
-        p.mb-1: a.text-danger(href='/account/unlink/instagram') Unlink your Instagram account
-      else
-        p.mb-1: a(href='/auth/instagram') Link your Instagram account
+    //- .offset-sm-3.col-md-7.pl-2
+    //-   if user.instagram
+    //-     p.mb-1: a.text-danger(href='/account/unlink/instagram') Unlink your Instagram account
+    //-   else
+    //-     p.mb-1: a(href='/auth/instagram') Link your Instagram account
     .offset-sm-3.col-md-7.pl-2
       if user.google
         p.mb-1: a.text-danger(href='/account/unlink/google') Unlink your Google account
@@ -103,11 +103,11 @@ block content
         p.mb-1: a.text-danger(href='/account/unlink/facebook') Unlink your Facebook account
       else
         p.mb-1: a(href='/auth/facebook') Link your Facebook account
-      if user.snapchat
-        p.mb-1: a.text-danger(href='/account/unlink/snapchat') Unlink your Snapchat account
-      else
-        p.mb-1: a(href='/auth/snapchat') Link your Snapchat account
-    .offset-sm-3.col-md-7.pl-2
+      //- if user.snapchat
+      //-   p.mb-1: a.text-danger(href='/account/unlink/snapchat') Unlink your Snapchat account
+      //- else
+      //-   p.mb-1: a(href='/auth/snapchat') Link your Snapchat account
+    //- .offset-sm-3.col-md-7.pl-2
       if user.twitter
         p.mb-1: a.text-danger(href='/account/unlink/twitter') Unlink your Twitter account
       else
@@ -117,17 +117,17 @@ block content
         p.mb-1: a.text-danger(href='/account/unlink/github') Unlink your GitHub account
       else
         p.mb-1: a(href='/auth/github') Link your GitHub account
-    .offset-sm-3.col-md-7.pl-2
+    //- .offset-sm-3.col-md-7.pl-2
       if user.linkedin
         p.mb-1: a.text-danger(href='/account/unlink/linkedin') Unlink your LinkedIn account
       else
         p.mb-1: a(href='/auth/linkedin') Link your LinkedIn account
-    .offset-sm-3.col-md-7.pl-2
+    //- .offset-sm-3.col-md-7.pl-2
       if user.steam
         p.mb-1: a.text-danger(href='/account/unlink/steam') Unlink your Steam account
       else
         p.mb-1: a(href='/auth/steam') Link your Steam account
-    .offset-sm-3.col-md-7.pl-2
+    //- .offset-sm-3.col-md-7.pl-2
       if user.quickbooks
         p.mb-1: a.text-danger(href='/account/unlink/quickbooks') Unlink your QuickBooks account
       else
