--- a/views/home.pug
+++ b/views/home.pug
@@ -2,12 +2,23 @@ extends layout
 
 block content
   h1
-    i.fas.fa-greater-than.fa-sm 
+    i.fas.fa-edit.fa-sm 
     | Sagacity
   p.lead An application that takes pictures or fragmented notes and converts them into high quality, readable and organized notes
   hr
+  h2 Why Sagacity?
+  p.lead Sagacity was developed to counter a daily issue that students face — note taking. Rather than valuing the quality of their notes, students are forced to write rudimentary and fragmented notes in order to keep up with the fast pace of our modern day education. Often, there are times where it is difficult to read one’s own handwriting. There may be mistakes, poor formatting, and more errors. Sagacity fixes those problems by correcting these errors using A.I, enhancing the quality and accuracy of one’s notes.
+  h2 Write, and then Write Some More!
+  p.lead Write your study notes, to-do lists, tables, graphs, xxx, or any rough note on a piece of paper. Don’t worry about spelling mistakes or neatness. That’s why we’re here for you.
+  h2 Snap and Upload
+  p.lead Take a picture of your notes and upload it onto our website. We will process your notes for you!
+  h2 Processing
+  p.lead Our machine intelligence software automatically organizes your notes, changes them to an organized and neat text file.
+  h2 How It Works?
   .row
     .col-md-12
-      p This project was based on the state of the art language A.I model.
+      p.lead This project was based on the state of the art language A.I model. Go visit the blog!
       p
         a.btn.btn-raised(href='https://openai.com/blog/better-language-models/', target="_target", role='button') Learn more »
+  h2 What now?
+  p.lead Create your free account and start trying out Sagacity today!
